KAFKA-16718-2/n: Minor changes